--- a/oishii/OiSHii/res/values/strings.xml
+++ b/oishii/OiSHii/res/values/strings.xml
@@ -15,9 +15,10 @@
     <string name="mnu_myacc">My Account</string>
     <string name="mnu_basket">Basket</string>
     <string name="loading_mnu">Loading today\'s menu..</string>
+    <string name="loading_offers">Loading Special Offers..</string>
     <string name="special">SPECIAL</string>
     <string name="offers">OFFERS</string>
-        <string name="today">TODAYS</string>
+    <string name="today">TODAYS</string>
     <string name="menu">MENU</string>
 
 </resources>
