--- a/oishii/OiSHii/res/values/strings.xml
+++ b/oishii/OiSHii/res/values/strings.xml
@@ -12,7 +12,7 @@
     <string name="mnu_about">About</string>
     <string name="mnu_offer">Offers</string>
     <string name="mnu_history">History</string>
-    <string name="mnu_myacc">My Account</string>
+    <string name="mnu_myacc">My Acc</string>
     <string name="mnu_basket">Basket</string>
     <string name="loading_mnu">Loading today\'s menu..</string>
     <string name="loading_offers">Loading Special Offers..</string>
