--- a/oishii/OiSHii/res/values/strings.xml
+++ b/oishii/OiSHii/res/values/strings.xml
@@ -18,13 +18,14 @@
     <string name="mnu_basket">Basket</string>
     <string name="loading_mnu">Loading today\'s menu..</string>
     <string name="loading_offers">Loading Special Offers..</string>
+    <string name="loading_register">Creating Account..</string>
     <string name="special">SPECIAL</string>
     <string name="offers">OFFERS</string>
     <string name="today">TODAYS</string>
     <string name="menu">MENU</string>
     <string name="acc_title">MY ACCOUNT</string>
     <string name="error_bad_response">Invalid server response</string>
-    <string name="error_no_data">Could not connect, Please check data connectivity.</string>
+    <string name="error_no_data">Could not connect, \nPlease check your data connectivity.</string>
     <string name="signtocontinue">You need to sign in to continue.</string>
     <string name="checkout">CHECK OUT</string>
     <string name="history_title">HISTORY</string>
@@ -35,13 +36,16 @@
     <string name="field_email">Email</string>
     <string name="field_password">Password</string>
     <string name="field_reppassword">Confirm</string>
+    <string name="dismiss">Dismiss</string>
 
     <!-- Validation error messages -->
-    <string name="error_no_title">*Please enter a title.</string>
-    <string name="error_no_fn">*Please enter a first name.</string>
-    <string name="error_no_ln">*Please enter a last name.</string>
-    <string name="error_no_email">*Please enter an email.</string>
-    <string name="error_no_pwd">*Please enter a password.</string>
-    <string name="error_no_rpwd">*Please repeat password.</string>
-    <string name="error_invalid_email">*Please enter a valid email</string>
+    <string name="error_no_title">* Please enter a title.</string>
+    <string name="error_no_fn">* Please enter a first name.</string>
+    <string name="error_no_ln">* Please enter a last name.</string>
+    <string name="error_no_email">* Please enter an email.</string>
+    <string name="error_no_pwd">* Please enter a password.</string>
+    <string name="error_no_rpwd">* Please repeat password.</string>
+    <string name="error_invalid_email">* Please enter a valid email</string>
+    <string name="error_pwd_match">* Password and confirmation do not match.</string>
+
 </resources>
