--- a/oishii/OiSHii/res/values/strings.xml
+++ b/oishii/OiSHii/res/values/strings.xml
@@ -3,7 +3,6 @@
 
     <string name="hello">Hello World, OiSHiiActivity!</string>
     <string name="app_name">OiSHii</string>
-    <string name="login_title">SIGN IN</string>
     <string name="signin">Sign In</string>
     <string name="createacc">Create Account</string>
     <string name="username">Email</string>
@@ -16,22 +15,15 @@
     <string name="mnu_history">History</string>
     <string name="mnu_myacc">My Acc</string>
     <string name="mnu_basket">Basket</string>
-    <string name="loading_mnu">Loading today\'s menu...</string>
-    <string name="loading_offers">Loading Special Offers...</string>
-    <string name="loading_register">Creating Account...</string>
-      <string name="loading_login">Signing In...</string>
-      <string name="loading_acc">Obtaining Account Info...</string>
-    <string name="special">SPECIAL</string>
-    <string name="offers">OFFERS</string>
-    <string name="today">TODAYS</string>
-    <string name="menu">MENU</string>
-    <string name="acc_title">MY ACCOUNT</string>
+    <!-- Loading dialog messages -->
+    <string name="loading_mnu">Loading today\'s menu…</string>
+    <string name="loading_offers">Loading Special Offers…</string>
+    <string name="loading_register">Creating Account…</string>
+    <string name="loading_login">Signing In…</string>
+    <string name="loading_acc">Obtaining Account Info…</string>
     <string name="error_bad_response">Invalid server response</string>
     <string name="error_no_data">Could not connect, \nPlease check your data connectivity.</string>
     <string name="signtocontinue">You need to sign in to continue.</string>
-    <string name="checkout">CHECK OUT</string>
-    <string name="history_title">HISTORY</string>
-    <string name="create_acc_title">CREATE ACCOUNT</string>
     <string name="field_title">Title</string>
     <string name="field_first_name">First Name</string>
     <string name="field_last_name">Last Name</string>
@@ -39,12 +31,24 @@
     <string name="field_password">Password</string>
     <string name="field_reppassword">Confirm</string>
     <string name="dismiss">Dismiss</string>
-    
+
+    <!-- SCREEN TITLES -->
+    <string name="checkout">CHECK OUT</string>
+    <string name="history_title">HISTORY</string>
+    <string name="special">SPECIAL</string>
+    <string name="offers">OFFERS</string>
+    <string name="today">TODAYS</string>
+    <string name="menu">MENU</string>
+    <string name="acc_title">MY ACCOUNT</string>
+    <string name="create_acc_title">CREATE ACCOUNT</string>
+    <string name="login_title">SIGN IN</string>
+    <string name="title_chng_pwd">CHANGE PASSWORD</string>
+
     <!-- My Account -->
-    <string  name="mydet">My Details</string>
-    <string  name="myloc">My Location</string>
-    <string  name="mypayment">Payment Details</string>
-    <string  name="mypwd">Change Password</string>
+    <string name="mydet">My Details</string>
+    <string name="myloc">My Location</string>
+    <string name="mypayment">Payment Details</string>
+    <string name="mypwd">Change Password</string>
 
     <!-- Validation error messages -->
     <string name="error_no_title">* Please enter a title.</string>
