--- a/oishii/OiSHii/res/values/strings.xml
+++ b/oishii/OiSHii/res/values/strings.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="hello">Hello World, OiSHiiActivity!</string>
     <string name="app_name">OiSHii</string>
     <string name="signin">Sign In</string>
     <string name="createacc">Create Account</string>
@@ -21,6 +20,9 @@
     <string name="loading_register">Creating Account…</string>
     <string name="loading_login">Signing In…</string>
     <string name="loading_acc">Obtaining Account Info…</string>
+    <string name="loading_chg_pwd">Changing Password…</string>
+    
+    
     <string name="error_bad_response">Invalid server response</string>
     <string name="error_no_data">Could not connect, \nPlease check your data connectivity.</string>
     <string name="signtocontinue">You need to sign in to continue.</string>
@@ -31,6 +33,9 @@
     <string name="field_password">Password</string>
     <string name="field_reppassword">Confirm</string>
     <string name="dismiss">Dismiss</string>
+    <string name="current">Current</string>
+    <string name="new_text">New</string>
+    <string name="chngpwd">Change Password</string>
 
     <!-- SCREEN TITLES -->
     <string name="checkout">CHECK OUT</string>
@@ -59,5 +64,7 @@
     <string name="error_no_rpwd">* Please repeat password.</string>
     <string name="error_invalid_email">* Please enter a valid email</string>
     <string name="error_pwd_match">* Password and confirmation do not match.</string>
+    <string name="error_no_curr_pwd">* Please enter your current password.</string>
+    <string name="error_no_new_pwd">* Please enter your new password.</string>
 
 </resources>
