--- a/oishii/OiSHii/res/values/strings.xml
+++ b/oishii/OiSHii/res/values/strings.xml
@@ -23,8 +23,7 @@
     <string name="loading_chg_pwd">Changing Password…</string>
     <string name="loading_det">Loading menu details…</string>
     <string name="loading_history">Loading history…</string>
-    
-    
+    <string name="loading">Loading details…</string>
     <string name="error_bad_response">Invalid server response</string>
     <string name="error_no_data">Could not connect, \nPlease check your data connectivity.</string>
     <string name="signtocontinue">You need to sign in to continue.</string>
@@ -38,9 +37,13 @@
     <string name="current">Current</string>
     <string name="new_text">New</string>
     <string name="chngpwd">Change Password</string>
-    <string name="details">Details</string>
- <string name="price">Price:</string>
-    
+    <string name="details">More Info</string>
+    <string name="price">Price:</string>
+    <string name="enter_promo">Enter promotional code:</string>
+    <string name="hint_promo">Promotional code</string>
+    <string name="btn_apply_promo">Apply promotional code</string>
+    <string name="btn_continue">Continue</string>
+	<string name="sold_out">Sold Out</string>
     <!-- SCREEN TITLES -->
     <string name="checkout">CHECK OUT</string>
     <string name="special">SPECIAL</string>
@@ -51,7 +54,7 @@
     <string name="create_acc_title">CREATE ACCOUNT</string>
     <string name="login_title">SIGN IN</string>
     <string name="title_chng_pwd">CHANGE PASSWORD</string>
-     <string name="title_history">HISTORY</string>
+    <string name="title_history">HISTORY</string>
 
     <!-- My Account -->
     <string name="mydet">My Details</string>
