--- a/oishii/OiSHii/res/values/strings.xml
+++ b/oishii/OiSHii/res/values/strings.xml
@@ -44,6 +44,7 @@
     <string name="btn_apply_promo">Apply promotional code</string>
     <string name="btn_continue">Continue</string>
 	<string name="sold_out">Sold Out</string>
+	<string name="add_basket">Add to basket</string>
     <!-- SCREEN TITLES -->
     <string name="checkout">CHECK OUT</string>
     <string name="special">SPECIAL</string>
