--- a/oishii/OiSHii/res/values/strings.xml
+++ b/oishii/OiSHii/res/values/strings.xml
@@ -64,6 +64,8 @@
     <string name="btn_cancel">Cancel</string>
     <string name="sold_out">Sold Out</string>
     <string name="add_basket">Add to basket</string>
+        <string name="no_loc">No locations saved!</string>
+        <string name="no_cards">No cards saved!</string>
     <!-- SCREEN TITLES -->
     <string name="checkout">CHECK OUT</string>
     <string name="special">SPECIAL</string>
