--- a/oishii/OiSHii/res/values/strings.xml
+++ b/oishii/OiSHii/res/values/strings.xml
@@ -62,10 +62,13 @@
     <string name="btn_save">Save</string>
     <string name="btn_add">Add Location</string>
     <string name="btn_cancel">Cancel</string>
+     <string name="btn_gtocheck"></string>
     <string name="sold_out">Sold Out</string>
     <string name="add_basket">Add to basket</string>
         <string name="no_loc">No locations saved!</string>
         <string name="no_cards">No cards saved!</string>
+        <string name="items">MY ITEMS</string>
+        <string name="calcs">CALCULATIONS</string>
     <!-- SCREEN TITLES -->
     <string name="checkout">BASKET</string>
     <string name="special">SPECIAL</string>
