--- a/oishii/OiSHii/res/values/strings.xml
+++ b/oishii/OiSHii/res/values/strings.xml
@@ -48,6 +48,10 @@
     <string name="field_use">Use for</string>
 
     <!-- General -->
+    <string name="subtotal">Subtotal</string>
+    <string name="delivery">Delivery</string>
+    <string name="total">Total</string>
+    <string name="free">FREE</string>
     <string name="basket_noitems">No Items in Basket</string>
     <string name="dismiss">Close</string>
     <string name="current">Current</string>
