--- a/oishii/OiSHii/res/values/strings.xml
+++ b/oishii/OiSHii/res/values/strings.xml
@@ -48,6 +48,8 @@
     <string name="field_use">Use for</string>
 
     <!-- General -->
+    <string name="items_text">ITEMS</string>
+    <string name="no_orders">No Orders</string>
     <string name="subtotal">Subtotal</string>
     <string name="delivery">Delivery</string>
     <string name="total">Total</string>
@@ -61,11 +63,11 @@
     <string name="price">Price:</string>
     <string name="enter_promo">Enter promotional code:</string>
     <string name="hint_promo">Promotional code</string>
-    <string name="btn_apply_promo">Apply promotional code</string>
     <string name="btn_continue">Continue</string>
     <string name="btn_save">Save</string>
     <string name="btn_add">Add Location</string>
     <string name="btn_cancel">Cancel</string>
+    <string name="btn_apply_promo">Apply promotional code</string>
     <string name="btn_gtocheck">Go to checkout</string>
     <string name="sold_out">Sold Out</string>
     <string name="add_basket">Add to basket</string>
@@ -87,6 +89,7 @@
     <string name="title_details">MY DETAILS</string>
     <string name="title_locations">MY LOCATIONS</string>
     <string name="title_sc">SAVED CARDS</string>
+    <string name="title_checkout">CHECKOUT</string>
 
     <!-- My Account -->
     <string name="mydet">My Details</string>
