--- a/oishii/OiSHii/res/values/strings.xml
+++ b/oishii/OiSHii/res/values/strings.xml
@@ -26,8 +26,7 @@
     <string name="loading">Loading details…</string>
     <string name="loading_save">Saving details…</string>
     <string name="loading_add_location">Adding Location…</string>
-    <string name="loading_get_delivery">Getting delivery time…</string>
-
+    <string name="loading_delivery_time">Loading delivery time…</string>
     <!--  -->
     <string name="error_bad_response">Invalid server response</string>
     <string name="error_no_data">Could not connect, \nPlease check your data connectivity.</string>
