--- a/oishii/OiSHii/res/values/strings.xml
+++ b/oishii/OiSHii/res/values/strings.xml
@@ -27,6 +27,7 @@
     <string name="loading_save">Saving details…</string>
     <string name="loading_add_location">Adding Location…</string>
     <string name="loading_delivery_time">Loading delivery time…</string>
+    <string name="loading_del_address">Deleting address…</string>
     <!--  -->
     <string name="error_bad_response">Invalid server response</string>
     <string name="error_no_data">Could not connect, \nPlease check your data connectivity.</string>
@@ -70,6 +71,8 @@
     <string name="btn_cancel">Cancel</string>
     <string name="btn_apply_promo">Apply promotional code</string>
     <string name="btn_gtocheck">Go to checkout</string>
+     <string name="btn_yes">Yes</string>
+     <string name="btn_no">No</string>
     <string name="sold_out">Sold Out</string>
     <string name="add_basket">Add to basket</string>
     <string name="no_loc">No locations saved!</string>
