--- a/oishii/OiSHii/res/values/strings.xml
+++ b/oishii/OiSHii/res/values/strings.xml
@@ -76,7 +76,7 @@
      <string name="btn_yes">Yes</string>
      <string name="btn_no">No</string>
     <string name="sold_out">Sold Out</string>
-    <string name="add_basket">Add to order</string>
+    <string name="add_basket">ADD TO ORDER</string>
     <string name="no_loc">No locations saved!</string>
     <string name="no_cards">No cards saved!</string>
     <string name="items">MY ITEMS</string>
