--- a/oishii/OiSHii/res/values/strings.xml
+++ b/oishii/OiSHii/res/values/strings.xml
@@ -57,7 +57,7 @@
     <string name="total">Total</string>
     <string name="free">FREE</string>
     <string name="basket_noitems">No Items in Basket</string>
-    <string name="dismiss">Close</string>
+    <string name="dismiss">CLOSE</string>
     <string name="current">Current</string>
     <string name="new_text">New</string>
     <string name="chngpwd">Change Password</string>
@@ -73,8 +73,8 @@
     <string name="btn_apply_promo">Apply promotional code</string>
     <string name="btn_gtocheck">Go to checkout</string>
     <string name="btn_editlocation">Edit Location</string>
-     <string name="btn_yes">Yes</string>
-     <string name="btn_no">No</string>
+     <string name="btn_yes">YES</string>
+     <string name="btn_no">NO</string>
     <string name="sold_out">Sold Out</string>
     <string name="add_basket">ADD TO ORDER</string>
     <string name="no_loc">No locations saved!</string>
