--- a/oishii/OiSHii/res/values/strings.xml
+++ b/oishii/OiSHii/res/values/strings.xml
@@ -61,7 +61,7 @@
     <string name="current">Current</string>
     <string name="new_text">New</string>
     <string name="chngpwd">Change Password</string>
-    <string name="details">More Info</string>
+    <string name="details">MORE INFO</string>
     <string name="price">Price:</string>
     <string name="enter_promo">Enter promotional code:</string>
     <string name="hint_promo">Promotional code</string>
