--- a/oishii/OiSHii/res/values/strings.xml
+++ b/oishii/OiSHii/res/values/strings.xml
@@ -54,6 +54,7 @@
     <string name="items_text">ITEMS</string>
     <string name="no_orders">No Orders</string>
     <string name="subtotal">Subtotal</string>
+    <string name="discount">Discount</string>
     <string name="delivery">Delivery</string>
     <string name="total">Total</string>
     <string name="free">FREE</string>
@@ -74,6 +75,7 @@
     <string name="btn_apply_promo">Apply promotional code</string>
     <string name="btn_gtocheck">Go to checkout</string>
     <string name="btn_editlocation">Edit Location</string>
+     <string name="btn_deltime">Set Delivery Time</string>
     <string name="btn_yes">YES</string>
     <string name="btn_no">NO</string>
     <string name="sold_out">Sold Out</string>
