--- a/oishii/OiSHii/res/values/strings.xml
+++ b/oishii/OiSHii/res/values/strings.xml
@@ -75,15 +75,17 @@
     <string name="btn_apply_promo">Apply promotional code</string>
     <string name="btn_gtocheck">Go to checkout</string>
     <string name="btn_editlocation">Edit Location</string>
-     <string name="btn_deltime">Set Delivery Time</string>
+    <string name="btn_deltime">Set Delivery Time</string>
     <string name="btn_yes">YES</string>
     <string name="btn_no">NO</string>
+    <string name="btn_no_saved">Use alternate payment</string>
     <string name="sold_out">Sold Out</string>
     <string name="add_basket">ADD TO ORDER</string>
-    <string name="no_loc">No locations saved!</string>
+    <string name="no_loc">No locations saved,Please add a location.</string>
     <string name="no_cards">No cards saved!</string>
     <string name="items">MY ITEMS</string>
     <string name="calcs">CALCULATIONS</string>
+    <string name="billingdelivery">Billing address is the same as delivery address</string>
     <!-- SCREEN TITLES -->
     <string name="checkout">BASKET</string>
     <string name="special">SPECIAL</string>
@@ -100,7 +102,10 @@
     <string name="title_sc">SAVED CARDS</string>
     <string name="title_checkout">CHECKOUT</string>
     <string name="title_check_del">DELIVERY TIME</string>
-
+    <string name="title_sel_ship">SHIPPING ADDRESS</string>
+    <string name="title_sel_bill">BILLING ADDRESS</string>
+     <string name="title_sel_payment">SELECT PAYMENT</string>
+     
     <!-- My Account -->
     <string name="mydet">My Details</string>
     <string name="myloc">My Location</string>
