--- a/oishii/OiSHii/res/values/strings.xml
+++ b/oishii/OiSHii/res/values/strings.xml
@@ -30,6 +30,7 @@
     <string name="loading_del_address">Deleting address…</string>
     <string name="loading_edit_address">Edit address…</string>
     <string name="loading_promo_code">Processing promotional code…</string>
+    <string name="loading_validate">Validating your order…</string>
     <!--  -->
     <string name="error_bad_response">Invalid server response</string>
     <string name="error_no_data">Could not connect, \nPlease check your data connectivity.</string>
