--- a/oishii/OiSHii/res/values/strings.xml
+++ b/oishii/OiSHii/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="password">Password</string>
     <string name="btn_login">Login</string>
     <string name="btn_signup">New Customer</string>
-    <string name="btn_today_menu">Todays menu</string>
+    <string name="btn_today_menu">Browse Menu</string>
     <string name="mnu_about">Home</string>
     <string name="mnu_offer">Offers</string>
     <string name="mnu_history">History</string>
