--- a/oishii/OiSHii/res/values/strings.xml
+++ b/oishii/OiSHii/res/values/strings.xml
@@ -33,6 +33,7 @@
     <string name="loading_validate">Validating your order…</string>
      <string name="loading_processing">Processing your order…</string>
      <string name="loading_directing">Directing to payment gateway…</string>
+      <string name="loading_gallery">Loading menu gallery…</string>
     <!--  -->
     <string name="error_bad_response">Invalid server response</string>
     <string name="error_no_data">Could not connect, \nPlease check your data connectivity.</string>
@@ -117,6 +118,7 @@
     <string name="mypwd">Change Password</string>
 
     <!-- Validation error messages -->
+    <string name="error_no_sdcard">* No SD Card mounted!.</string>
     <string name="error_no_title">* Please enter a title.</string>
     <string name="error_no_fn">* Please enter a first name.</string>
     <string name="error_no_ln">* Please enter a last name.</string>
